--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,11 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.2.0",
+    "better-auth": "^1.1.16",
+    "dayjs": "^1.11.13",
+    "drizzle-orm": "^0.39.2",
+    "drizzle-typebox": "^0.3.0",
     "elysia": "latest"
   },
   "devDependencies": {
