--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "@elysiajs/cors": "^1.2.0",
     "better-auth": "^1.1.16",
     "dayjs": "^1.11.13",
+    "dizzle": "^1.0.4",
     "drizzle-orm": "^0.39.2",
+    "drizzle-kit": "^0.30.1",
     "drizzle-typebox": "^0.3.0",
     "elysia": "latest"
   },
