--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,11 @@
     "better-auth": "^1.1.16",
     "dayjs": "^1.11.13",
     "dizzle": "^1.0.4",
-    "drizzle-orm": "^0.39.2",
     "drizzle-kit": "^0.30.1",
+    "drizzle-orm": "^0.39.2",
     "drizzle-typebox": "^0.3.0",
-    "elysia": "latest"
+    "elysia": "latest",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "bun-types": "latest"
