--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "migrate": "bunx drizzle-kit push"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.744.0",
     "@elysiajs/cors": "^1.2.0",
     "better-auth": "^1.1.16",
     "dayjs": "^1.11.13",
@@ -19,6 +20,7 @@
     "postgres": "^3.4.5"
   },
   "devDependencies": {
+    "@types/bun": "^1.2.2",
     "bun-types": "latest"
   },
   "module": "src/index.js"
