--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "app",
-  "version": "0.1.0",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts",
-    "migrate": "bunx drizzle-kit push"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.744.0",
-    "@elysiajs/cors": "^1.2.0",
-    "better-auth": "^1.1.16",
-    "dayjs": "^1.11.13",
-    "dizzle": "^1.0.4",
-    "drizzle-kit": "^0.30.1",
-    "drizzle-orm": "^0.39.2",
-    "drizzle-typebox": "^0.3.0",
-    "elysia": "latest",
-    "pg": "^8.13.1",
-    "postgres": "^3.4.5"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.2.2",
-    "bun-types": "latest"
-  },
-  "module": "src/index.js"
+    "name": "app",
+    "version": "0.1.0",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "bun run --watch src/index.ts",
+        "migrate": "bunx drizzle-kit push",
+        "build": "bun build --target=bun ./src/index.ts --outdir ./dist"
+    },
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.744.0",
+        "@elysiajs/cors": "^1.2.0",
+        "better-auth": "^1.1.16",
+        "dayjs": "^1.11.13",
+        "dizzle": "^1.0.4",
+        "drizzle-kit": "^0.30.1",
+        "drizzle-orm": "^0.39.2",
+        "drizzle-typebox": "^0.3.0",
+        "elysia": "latest",
+        "pg": "^8.13.1",
+        "postgres": "^3.4.5"
+    },
+    "devDependencies": {
+        "@types/bun": "^1.2.2",
+        "bun-types": "latest"
+    },
+    "module": "src/index.js"
 }
