--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "bun run --watch src/index.ts",
         "migrate": "bunx drizzle-kit push",
-        "build": "bun build --target=bun ./index.ts --outdir ./dist",
-        "start": "bun ./index.ts"
+        "build": "bun build --target=bun ./src/index.ts --outdir ./dist",
+        "start": "bun src/index.ts"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.744.0",
