test build script

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "bun run --watch src/index.ts",
         "migrate": "bunx drizzle-kit push",
-        "build": "bun install && bun build --target=bun ./src/index.ts --outdir ./dist",
+        "build": "bun install && bun build --target=bun --env disable ./src/index.ts --outdir ./dist",
         "start": "bun dist/index.js"
     },
     "dependencies": {
